Add view for displaying messages

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
         <script src="/js/controllers/settingsCtrl.js"></script>
         <script src="/js/controllers/visitorsCtrl.js"></script>
         <script src="/js/controllers/interactiveCtrl.js"></script>
+        <script src="/js/controllers/messagesCtrl.js"></script>
 
         <!-- Directives/Components -->
         <script src="/js/components/navigation.component.js"></script>
@@ -36,7 +37,7 @@
     </head>
     <body ng-app="socket-app" ng-controller="MainCtrl">
         <!-- navigation bar -->
-        <navigation></navigation>
+        <navigation num-messages="numMessages"></navigation>
         <!-- main content -->
         <ng-view></ng-view>
     </body>
