Add messages to view

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 
         <!-- Factories -->
         <script src="/js/factories/socket.factory.js"></script>
+        <script src="/js/factories/messages.factory.js"></script>
 
         <!-- Set Base url for routing -->
         <base href="/">
